manifest_files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    #- host: 158.160.60.14
    - http:
        paths:
          - pathType: Prefix
            path: "/web"
            backend:
              service:
                name: myapp-nginx
                port:
                  number: 80
